--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <div class="text-content">
                 <h2>Hello</h2>
                 <h2>I'm Ayberk</h2>
-                <span>Frontend Developer</span>
+                <span>Think Worker</span>
                </div> 
                <div class="button-content">
-                    <button>Hire Me</button>
-                    <button>Download CV</button>
+                    <a class="button">Hire Me</a>
+                    <a class="button" href="./c7.pdf" download>Download CV</a>
                 </div>
             </div>
             <div class="main-image">
